--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /emsdk
-/**/node_modules
-/test/bin
+/server/node_modules
+/server/bin/*.html
+/server/bin/*.js
+/server/bin/*.wasm
+
+/test/mss.cpp
