--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1)  
+cmake_minimum_required(VERSION 3.12)  
 
 project(wasm LANGUAGES CXX)   
 
@@ -16,7 +16,6 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 if(EMSCRIPTEN)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/public)
   set(CMAKE_EXECUTABLE_SUFFIX .html)
-  add_link_options(-s EXPORTED_RUNTIME_METHODS=ccall,cwrap)
 else()
   set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 endif()
@@ -26,7 +25,8 @@ foreach(file IN LISTS files)
   message(${file})
   if(EMSCRIPTEN)
     add_executable(${file} ${cppfile})
-    # worked only if specified as executable
+    set_target_properties(${file} PROPERTIES LINK_FLAGS 
+      "-g -s EXPORTED_RUNTIME_METHODS=ccall,cwrap -s EXPORTED_FUNCTIONS=@${CMAKE_SOURCE_DIR}/src/exported_functions.json")
   else()
     add_library(${file} ${cppfile})
   endif()
