--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
 /emsdk
-node_modules/
-/server/bin/*.html
-/server/bin/*.js
-/server/bin/*.wasm
-/server/bin/*.json
 
-/test/mss.cpp
+/test/build
+/test/compile_commands.json
 
-/test/build*/
-/test/temp
+/Session.vim
 
-/example/mandelbrot/build/
-/example/mandelbrot/temp/
